--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,12 @@
 			<artifactId>zip4j</artifactId>
 			<version>2.6.4</version>
 		</dependency>
+
+		<dependency>
+			<groupId>commons-net</groupId>
+			<artifactId>commons-net</artifactId>
+			<version>3.7.2</version>
+		</dependency>
 	</dependencies>
 
 	<build>
